buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }
    dependencies {
        classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.24")
        classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.6.0'
    }
}

plugins {
    id 'application'
    id 'uk.gov.hmcts.java' version '0.12.9'
    id 'pmd'
    id 'jacoco'
    id 'org.springframework.boot' version '2.6.2'
    id 'info.solidsoft.pitest' version '1.6.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'com.github.ben-manes.versions' version '0.40.0'
    id 'org.sonarqube' version '3.2.0'
}

apply plugin: "info.solidsoft.pitest"
apply plugin: 'java'
apply plugin: 'net.serenity-bdd.aggregator'
apply plugin: 'project-report'
apply plugin: 'idea'
apply plugin: 'io.spring.dependency-management'

def versions = [
        junit          : '5.5.0',
        lombok         : '1.18.6',
        reformLogging  : '5.1.7',
        reformS2sClient: '4.0.2',
        serenity       : '2.1.0',
        gradlePitest   : '1.3.0',
        sonarPitest    : '0.5',
        pitest         : '1.4.2',
        springBoot     : '2.4.9',
        springHystrix  : '2.1.1.RELEASE',
        rest_assured   : '3.3.0',
        feign_jackson  : '9.7.0'
]

mainClassName = 'uk.gov.hmcts.reform.roleassignmentrefresh.RoleAssignmentRefreshApplication'
def jarName = 'am-role-assignment-refresh-batch.jar'

pmd {
    toolVersion = '6.21.0'
    sourceSets = []
}

group = 'uk.gov.hmcts.reform.roleassignmentrefresh'
version = '0.0.1'

allprojects {
    sourceCompatibility = '11'
    targetCompatibility = '11'
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.0
            }
        }
    }
}

sourceSets {
    integrationTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/integrationTest/java')
        }
        resources.srcDir file('src/integrationTest/resources')
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    mustRunAfter test
    finalizedBy aggregate
}
check.dependsOn integration

task fortifyScan(type: JavaExec)  {
  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

jacocoTestReport {
    executionData(test)
    reports {
        xml.enabled = true
        csv.enabled = false
        xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
    }
}

project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport

jacoco {
    toolVersion = "0.8.2"
}

pitest {
    pitestVersion = "1.5.2"
    testPlugin = "junit5"
    targetClasses = ['uk.gov.hmcts.reform.*']
    excludedClasses = ['uk.gov.hmcts.reform.roleassignmentrefresh.*Application',
                       '*config*',
                       '*exception*',
                       '*GenericArrayUserType*',
                       '*launchdarkly*',
                       '*oidc*',
                       '*RefreshORMRules*,',
                       'uk.gov.hmcts.reform.roleassignmentrefresh.util.Swagger2SpringBoot']
    excludedMethods = ['']
    threads = 15
    outputFormats = ['XML', 'HTML']
    timestampedReports = true
    mutationThreshold = 60
}

sonarqube {
    properties {
        property "sonar.projectName", "am-role-assignment-refresh-batch"
        property "sonar.projectKey", "am-role-assignment-refresh-batch"
        property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.exclusions", "**config**," +
                "**exception**," +
                "**constants**," +
                "src/main/java/uk/gov/hmcts/reform/roleassignmentrefresh/data/Refresh*," +
                "**model**,"+
                "**OIdcAdminConfiguration**,"+
                "**Application.java,"
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
    }
}

project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
project.tasks['sonarqube'].group = "Verification"

dependencyUpdates.resolutionStrategy {
    componentSelection { rules ->
        rules.all {
            def isNonStable = { String version ->
                ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'ea'].any { qualifier ->
                    version ==~ /(?i).*[.-]\$qualifier[.\\d-+]*/
                }
            }
            if (isNonStable(candidate.version) && !isNonStable(currentVersion)) {
                selection.reject('Release candidate')
            }
        }
    }
}

//https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
    suppressionFile = 'config/owasp/suppressions.xml'
}

dependencyUpdates.resolutionStrategy = {
    componentSelection { rules ->
        rules.all { ComponentSelection selection ->
            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
            }
            if (rejected) {
                selection.reject('Release candidate')
            }
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url 'https://jitpack.io'
    }
    maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
}


dependencies {
    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-batch', version: '2.6.2') {
        exclude group: 'org.glassfish', module: 'jakarta.el'
    }
    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: versions.springBoot)
    compile(group: 'org.springframework', name: 'spring-beans', version: '5.3.14')
    compile(group: 'org.springframework', name: 'spring-context', version: '5.3.7')
    compile(group: 'org.springframework', name: 'spring-core', version: '5.3.14')

    compile group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'

    implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.6.1'
    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.6.1'
    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.6.1'
    implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.6.1'
    implementation group: 'org.springframework', name: 'spring-core', version: '5.3.15'
    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: versions.reformS2sClient
    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
    implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
    implementation 'com.github.hmcts:properties-volume-spring-boot-starter:0.1.1'
    implementation 'commons-io:commons-io:2.8.0'
    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.0.16'
    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.58'


    compile group: 'com.github.hmcts', name: 'idam-java-client', version: '2.0.1'
    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.0'
    compile(group: 'com.github.hmcts', name: 'auth-checker-lib', version: '2.1.4') {
        // TODO remove when auth-checker-lib upgrades its dependency to spring boot 2.0.x
        exclude group: 'uk.gov.hmcts.reform', module: 'java-logging-spring'
    }
    compile group: 'javax.inject', name: 'javax.inject', version: '1'
    compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk' , version: '5.6.5'


    testCompile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
    testImplementation 'org.springframework.batch:spring-batch-test'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-websocket"
        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-core"
    }
    testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot) {
        exclude group: 'junit', module: 'junit'
        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-websocket"
        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-core"
    }

    pitest 'org.pitest:pitest-junit5-plugin:0.12'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit

    testCompile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
    testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
    testCompile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.6.0'
    testCompile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'

    testCompile group: 'io.rest-assured', name: 'rest-assured', version: versions.rest_assured
    testCompile group: 'io.github.openfeign', name: 'feign-jackson', version: versions.feign_jackson
    testCompile('com.opentable.components:otj-pg-embedded:0.13.3')
    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'

    compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
    integrationTestCompile group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
    integrationTestCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
    integrationTestCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
    integrationTestCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity

    implementation 'org.jetbrains:annotations:23.0.0'

    integrationTestCompile sourceSets.main.runtimeClasspath
    integrationTestCompile sourceSets.test.runtimeClasspath

}

test {
    useJUnitPlatform()
    failFast = true
}

configurations {
    runtime.exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
    runtime.exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
}

bootJar {
    archiveName = jarName

    manifest {
        attributes('Implementation-Version': project.version.toString())
    }
}
